# DiePpi_bot

./: .coderabbit.yml  .env.example  README.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: issue-name.md  이슈-템플릿.md
.github/workflows/: depoly.yml  pre-commit.yml
cogs/: base_cog.py  gemini.py  hello.py  role_change.py  study_ranking.py  time_tracking.py  week_analytics.py
core/: base_model.py  config.py  constants.py  enums.py  env.py  gemini_client.py  messages.py  random_messages.py
db/: attend_collection.py  client.py  study_collection.py
models/: attend_model.py  study_model.py
tests/: test_attend_collection.py  test_time_utils.py
utils/: discord_utils.py  time_utils.py
