[tool.poetry]
name = "dieppi-bot"
version = "0.1.0"
description = ""
authors = ["LeeInGyu <developLee20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
asyncio = "^3.4.3"
pydantic-settings = "^2.9.1"
tzdata = "^2025.2"
pymongo = "^4.13.0"
motor = "^3.7.1"
pre-commit = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
