[tool.poetry]
name = "dieppi-bot"
version = "0.1.0"
description = ""
authors = ["LeeInGyu <developLee20@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
asyncio = "^3.4.3"
pydantic-settings = "^2.9.1"
tzdata = "^2025.2"
pymongo = "^4.13.0"
motor = "^3.7.1"
pre-commit = "^4.2.0"
google = "^3.0.0"
google-genai = "1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
